<resources>
    <string name="app_name">SocialMediaApp</string>

    <string name="shortlabel1">MainActivity</string>
    <string name="longlabel1">Open MainActivity</string>
    <string name="disablemessage1">Disabled</string>

    <string name="shortlabel2">SecondActivity</string>
    <string name="longlabel2">Open SecondActivity</string>
    <string name="disablemessage2">Disabled</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">908987286286511</string>
    <string name="fb_login_protocol_scheme">fb908987286286511</string>

    <!--    activity_add_post.xml-->
    <string name="upload_post">Upload Post</string>
    <string name="enter_title">Enter Title…</string>
    <string name="enter_description">Enter description…</string>

    <!--    activity_chat.xml-->
    <string name="online">Online</string>
    <string name="start_typing">Start typing</string>

    <!--    activity_group_info.xml-->
    <string name="group_title">Group Title</string>
    <string name="group_description">Group Description</string>
    <string name="the_description_of_the_group">The description of the group</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_participant">Add Participant</string>
    <string name="leave_group">Leave Group</string>
    <string name="participants_n">Participants (N)</string>

    <!--    activity_login.xml-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_recovery">Forgot Password? Recovery</string>
    <string name="no_have_account_register">No have account? Register</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!--   activity_post_detail.xml -->
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="like">LIKE</string>
    <string name="share">SHARE</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">Enter comment…</string>

    <!--    -->
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="post_notifications">Post Notifications</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="his_message">His message</string>
    <string name="delivered">delivered</string>
    <string name="his_name">His Name</string>
    <string name="the_last_message">The last message</string>
    <string name="this_is_actual_comment">This is actual comment</string>
    <string name="time">Time</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="create_group">Create Group</string>
    <string name="add_group_participant">Add Group Participant</string>
    <string name="group_info">Group Info</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
    <string name="more">More</string>
    <string name="change_language">Change Language</string>
    <string name="night_mode">Enable Night Mode</string>
    <string name="SettingsTitle">Settings</string>
    <string name="PostDetail">Post Detail</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Users">Users</string>
    <string name="Chat">Chat</string>
    <string name="GroupChats">Group Chats</string>
    <string name="AddNewPost">Add New Post</string>
    <string name="UpdatePost">Update Post</string>
    <string name="Update">Update</string>
    <string name="UpdatingPost">Updating Post...</string>
    <string name="Updated">Updated...</string>
    <string name="PublishingPost">Publishing post...</string>
    <string name="PostPublished">Post published</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="ChooseImagefrom">Choose Image from</string>
    <string name="PermissionMessageCameraStorage"><![CDATA[Camera & Storage both permissions are necessary]]></string>
    <string name="PermissionMessageStorage">Storage permissions is necessary</string>
    <string name="Successful">Successful</string>

    <!--    Adapters-->
    <string name="receivepostnotifications">You will receive post notifications</string>
    <string name="Subscribefailed">Subscribe failed</string>
    <string name="postNotificationsMsg">You will not receive post notifications</string>
    <string name="Delete">Delete</string>
    <string name="deletethismessage">Are you sure to delete this message?</string>
    <string name="No">No</string>
    <string name="Seen">Seen</string>
    <string name="Delivered">Delivered</string>
    <string name="messagedeleted">message deleted...</string>
    <string name="deletedonlyyour">You can deleted only your messages...</string>
    <string name="deletethiscomment">Are you sure to delete this comment?</string>
    <string name="Cancel">Cancel</string>
    <string name="Cantdeleteother">Can\'t delete other\'s comment...</string>
    <string name="deletethisnotification">Are you sure to delete this notification?</string>
    <string name="Notificationdeleted">Notification deleted...</string>
    <string name="ChooseOption">Choose Option</string>
    <string name="RemoveAdmin">Remove Admin</string>
    <string name="RemoveUser">Remove User</string>
    <string name="MakeAdmin">Make Admin</string>
    <string name="CreatorofGroup">Creator of Group...</string>
    <string name="AddParticipant">Add Participant</string>
    <string name="userinthisgroup">Add this user in this group?</string>
    <string name="ADD">ADD</string>
    <string name="AddedSuccessfully">Added Successfully...</string>
    <string name="isnowadmin">The User is now admin...</string>
    <string name="Removedsuccessfully">Removed successfully...</string>
    <string name="nolongeradmin">The User is no longer admin...</string>
    <string name="Youreblockedby">You\'re blocked by that user, can\'t send message...</string>
    <string name="BlockedSuccessfully">Blocked Successfully...</string>
    <string name="Failed">\"Failed: \"</string>
    <string name="UnblockedSuccessfully">Unblocked Successfully...</string>

</resources>
