<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_logout"
        android:title="@string/logout"/>

    <item android:id="@+id/action_settings"
        android:title="@string/settings"/>

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/action_add_post"
        android:title="@string/add_post"
        android:icon="@drawable/ic_add_white"
        app:showAsAction="always" />

    <item android:id="@+id/action_create_group"
        android:title="@string/create_group"
        android:icon="@drawable/ic_creategroup_white"
        app:showAsAction="always" />

    <item android:id="@+id/action_add_participant"
        android:title="@string/add_group_participant"
        android:icon="@drawable/ic_addperson_white"
        app:showAsAction="always" />

    <item android:id="@+id/action_groupinfo"
        android:title="@string/group_info"
        android:icon="@drawable/ic_info_white"
        app:showAsAction="always" />

</menu>