<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".SettingsActivity"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/cardBackground"
            android:padding="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/postSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_notifications"
                android:textColor="?attr/textColor" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/darkModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/night_mode"
                android:textColor="?attr/textColor" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:layout_below="@+id/card_view"
        android:layout_marginBottom="0dp"
        android:background="?attr/buttonColor"
        android:text="@string/change_language"
        android:textColor="?attr/textColor" />

</RelativeLayout>