<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/pUploadBtn"
            android:text="@string/upload_post"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/buttonColor"/>

        <EditText
            android:id="@+id/pTitleEt"
            android:textColor="?attr/textHintColor"
            android:background="?attr/cardBackground"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="?attr/backgroundColor"
            android:minHeight="200dp"/>

        <EditText
            android:id="@+id/pDescriptionEt"
            android:textColor="?attr/textHintColor"
            android:background="?attr/cardBackground"
            android:padding="10dp"
            android:hint="@string/enter_description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>