<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GroupInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/groupIconIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/descriptionTv"
                android:background="#54000000"
                android:text="@string/the_description_of_the_group"
                android:layout_width="match_parent"
                android:layout_above="@+id/createdByTv"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/createdByTv"
                android:background="#54000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text=""
                android:layout_alignParentBottom="true"
                android:padding="5dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/editGroupTv"
            android:drawableStart="@drawable/ic_edit_white"
            android:drawableTint="@color/colorBlack"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_group"
            android:padding="5dp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <TextView
            android:drawableStart="@drawable/ic_addperson_white"
            android:drawableTint="@color/colorBlack"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:id="@+id/addParticipantTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_participant"
            android:padding="5dp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <TextView
            android:id="@+id/leaveGroupTv"
            android:drawableStart="@drawable/ic_delete_black"
            android:drawableTint="@color/colorBlack"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_group"
            android:padding="5dp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <TextView
            android:id="@+id/participantsTv"
            android:drawableStart="@drawable/ic_users_black"
            android:drawableTint="@color/colorBlack"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants_n"
            android:padding="5dp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participantsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_participant_add" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>