<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/cardBackground">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uPictureIv"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_img"
                android:layout_height="50dp"
                android:layout_width="50dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/uNameTv"
                    android:text=""
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/pTimeTv"
                    android:text=""
                    android:textColor="?attr/textColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_more_black" />

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:autoLink="all"
            android:text=""/>

        <TextView
            android:id="@+id/pDescriptionTv"
            android:text=""
            android:textColor="?attr/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/backgroundColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLikesTv"
                android:text=""
                android:layout_weight="1"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/pCommentsTv"
                android:text=""
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="?attr/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/buttonColor"
            android:gravity="center">

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_like_black"
                android:drawableStart="@drawable/ic_like_black"
                android:drawablePadding="5dp"
                android:layout_weight="1"
                android:textColor="?attr/textColor"
                android:text="@string/like"
                android:background="@null"/>

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_comment_black"
                android:drawableStart="@drawable/ic_comment_black"
                android:drawablePadding="5dp"
                android:textColor="?attr/textColor"
                android:text="@string/comments"
                android:background="@null"/>

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_share_black"
                android:drawableStart="@drawable/ic_share_black"
                android:drawablePadding="5dp"
                android:layout_weight="1"
                android:textColor="?attr/textColor"
                android:text="@string/share"
                android:background="@null"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>